syntax = "proto3";

package friendrequest;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/Costin2000/GoChat---Schwarz-Internship---2025/services/friend-request-base/proto;proto";

service FriendRequestService {
    rpc CreateFriendRequest (CreateFriendRequestRequest) returns (CreateFriendRequestResponse);
    rpc UpdateFriendRequest (UpdateFriendRequestRequest) returns (UpdateFriendRequestResponse);
}

message FriendRequest {
  string id = 1;
  string sender_id = 2;
  string receiver_id = 3;   
  RequestStatus status = 4;
  google.protobuf.Timestamp created_at = 5;
}

enum RequestStatus {
  STATUS_UNKNOWN = 0;
  STATUS_PENDING = 1; // mapped to 1 in the db
  STATUS_ACCEPTED = 2; // mapped to 2 in the db
  STATUS_REJECTED = 3; // mapped to 3 in the db
}

message CreateFriendRequestRequest {
  string sender_id = 1;
  string receiver_id = 2;
}

message CreateFriendRequestResponse {
  FriendRequest request = 1;
}

message UpdateFriendRequestRequest {
   FriendRequest friend_request = 1;
   google.protobuf.FieldMask field_mask = 2; 
}

message UpdateFriendRequestResponse {
   FriendRequest friend_request = 1;
}